<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:stretchColumns="1">
        	
        <TableRow>
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:layout_span="3"
				android:gravity="center_vertical|center_horizontal"
				android:textSize="10pt"
				android:text="Profile" />     
        </TableRow>
        
        <View
        	android:layout_height="2dip"
        	android:background="#FF909090" />
        
	    <TableRow>
	        <TextView
	            android:text="@string/pb_email"
	            android:padding="3dip" />
	        <EditText android:id="@+id/email" 
				android:layout_span="2"
	        	android:gravity="left"
	            android:padding="3dip" />
	    </TableRow>
	    
	    <TableRow>
		    <Button android:id="@+id/save_button" 
				android:layout_column="1"
			  	android:text="@string/save"
	        	android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1" />
		
			<Button android:id="@+id/cancel_button" 
				android:layout_column="2"
	  			android:text="@string/cancel"
	        	android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1" />
		</TableRow>
	</TableLayout>
</LinearLayout>